--- a/srcs/requirements/wordpress/tools/eugene.html
+++ b/srcs/requirements/wordpress/tools/eugene.html
@@ -48,9 +48,9 @@
 <img src="https://sm.ign.com/ign_fr/screenshot/default/blob_cv4s.jpg"
      alt="Eugene et la mif"><br/>
 
-<p><a href="https://127.0.0.1/wordpress">Cliquez ici</a> pour accéder à Wordpress.</p>
+<p><a href="https://127.0.0.1/">Cliquez ici</a> pour retourner à Wordpress.</p>
 
-<p><a href="https://127.0.0.1/phpmyadmin">Cliquez ici</a> pour accéder à PhpMyAdmin.</p>
+<p><a href="https://127.0.0.1/phpmyadmin">Cliquez ici</a> pour accéder à Adminer.</p>
 <p><em>Joyeux Hanouka.</em></p>
 </body>
 </html>
