--- a/srcs/requirements/wordpress/tools/eugene/index.html
+++ b/srcs/requirements/wordpress/tools/eugene/index.html
@@ -10,7 +10,7 @@
         text-align: center;
 	      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
-    h2
+    h3
     {
     	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
@@ -21,34 +21,57 @@
     }
     body
     {
-        background-color: #b7dee6; /* Le fond de la page sera noir */
+      background: url("img/water_background.png") repeat center;
+        background-color: #d2e7eb; /* Le fond de la page sera noir */
         color: rgb(0, 0, 0); /* Le texte de la page sera blanc */
-        background: url("img/water_background.png") fixed repeat center;
+    }
+    a
+    {
+       color: rgb(216, 17, 17);
+    }
+    a:hover /* Apparence au survol des liens */
+    {
+       text-decoration: underline;
+       color: rgb(216, 146, 14);
     }
   </style>
 </head>
 
 <body>
-  <h1>Every journey begins with a choice!</h1><br />
+  <h1>Every journey begins with a choice!</h1><br/>
   <a href="img/salameche.png"><img src="img/pokeball.png" alt="Salamaleykoumèche" title="Salamaleykoumèche" height="150" /></a>
   <a href="img/eugene.png"><img src="img/pokeball.png" alt="Eugène" title="Eugène" height="150" /></a>
   <a href="img/bulbizarre.png"><img src="img/pokeball.png" alt="Boulbizarre" title="Boulbizarre" height="150" /></a>
-  <br />
-  <br />
-  <p>Si tu n'as pas choisis Eugène tu ne mérites pas de continuer l'aventure.<br />
-  Tu peux toujours aller sur <a href="../adminer">Adminer</a> ou retourner sur le <a href="..">Wordpress</a>.</p><br />
+  <br/>
+  <br/>
+  <p>Si tu n'as pas choisis Eugène tu ne mérites pas de continuer l'aventure.<br/>
+  Tu peux toujours aller sur <a href="../adminer">Adminer</a> ou retourner sur le <a href="..">Wordpress</a>.</p><br/>
   Si tu as fais le bon choix je te laisse regarder cette <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">vidéo d'introduction</a> pour débuter ton aventure.
   
-  <h1>Who's that Pokémon!</h1><br/>
-  Lui c'est Eugène il est plutôt beau gosse. 
-  <h2>Le gang d'Eugène :</h2><br/>
-  <img src="https://sm.ign.com/ign_fr/screenshot/default/blob_cv4s.jpg"
-  alt="Eugène et la mif"><br/>
+  <h1>Who's that Pokémon!</h1>
   
-  <p> pour retourner à Wordpress.</p>
-  
-  <p><a href="https://127.0.0.1/phpmyadmin">Cliquez ici</a> pour accéder à Adminer.</p>
-  <p><em>Joyeux Hanouka.</em></p>
+  <h3>Eugène</h3>
+  <p>Lui c'est Eugène il est plutôt beau gosse ouai.<br/>
+  Pitre hilare et leader né à la fois, ses proches l'adore.<br/>
+  Ce qu'il aime le plus c'est les cuillère à soupe de soupe de sucre et le mot "plétore"</p>
+  <img src="img/eugene.png" alt="Eugène ce beau gosse" title="Eugène ce beau gosse" height="200">
+  <img src="img/eugene_flambeur.png" alt="Eugène ce flambeur" title="Eugène ce flambeur" height="200">
+  <p>D'ailleurs en parlant d'eux ...</p>
+
+  <h2>Le crew d'Eugène</h2>
+  <p>Ça c'est les homies, les kheys, le sang, le gang ...<br/>
+  Bref c'est la famille qu'il a choisit même si c'est plutôt lui qui a été choisit comme leader par les autres.</p>
+  <img src="img/eugene_squad_1.jpg" alt="Eugène dans le hood" title="Eugène dans le hood" height="200">
+  <img src="img/eugene_squad_2.jpg" alt="Eugène dans le repère" title="Eugène dans le repère" height="200">
+
+  <h2>La vrai mif'</h2>
+  <p>À droite sa grande soeur Eugènie et au milieu Roger le daron.<br/>
+  C'est avec eux deux qu'il a grandit avant de rencontrer le crew.</p>
+  <img src="img/eugene_family.png" alt="Eugène et la mif'" title="Eugène et la mif'" height="200">
+
+  <p>Voilà c'est tout.<br/>
+  <em>Joyeux Hanouka.</em></p>
+  <img src="img/eugene_meal.gif" alt="Eugène et la mif'" title="Eugène et la mif'" height="200">
 </body>
 </html>
   
