--- a/srcs/requirements/wordpress/tools/eugene/index.html
+++ b/srcs/requirements/wordpress/tools/eugene/index.html
@@ -48,15 +48,15 @@
   <br/>
   <br/>
   <p>Si tu n'as pas choisis Eugène tu ne mérites pas de continuer l'aventure.<br/>
-  Tu peux toujours aller sur <a href="../adminer">Adminer</a> ou retourner sur le <a href="..">Wordpress</a>.</p>
+  Tu peux toujours aller sur <a href="../adminer">Adminer</a> ou retourner sur <a href="..">Wordpress</a>.</p>
   <p>Si tu as fais le bon choix je te laisse regarder cette <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">vidéo d'introduction</a> pour débuter ton aventure.</p>
   
   <h1>Who's that Pokémon!</h1>
   
   <h2>Eugène</h2>
   <p>Lui c'est Eugène il est plutôt beau gosse ouai.<br/>
-  Pitre hilare et leader né à la fois, ses proches l'adore.<br/>
-  Ce qu'il aime le plus c'est les cuillère à soupe de soupe de sucre et le mot "plétore"</p>
+  Ce qu'il aime le plus c'est les cuillères à soupe de soupe de sucre et le mot "plétore"</p>
+  Pitre hilare et leader né à la fois, ses proches l'adorent.<br/>
   <div>
     <img src="img/eugene.png" alt="Eugène ce beau gosse" title="Eugène ce beau gosse" height="200">
     <img src="img/eugene_flambeur.png" alt="Eugène ce flambeur" title="Eugène ce flambeur" height="200">
@@ -65,7 +65,7 @@
 
   <h2>Le crew d'Eugène</h2>
   <p>Ça c'est les homies, les kheys, le sang, le gang ...<br/>
-  Bref c'est la famille qu'il a choisit même si c'est plutôt lui qui a été choisit comme leader par les autres.</p>
+  Bref c'est la famille qu'il a choisi et qui ne le trahira jamais, même si c'est plutôt eux qui l'ont choisi comme leader.</p>
   <div>
     <img src="img/eugene_squad_1.jpg" alt="Eugène dans le hood" title="Eugène dans le hood" height="200">
     <img src="img/eugene_squad_2.jpg" alt="Eugène dans le repère" title="Eugène dans le repère" height="200">
