--- a/srcs/requirements/wordpress/tools/eugene/index.html
+++ b/srcs/requirements/wordpress/tools/eugene/index.html
@@ -55,8 +55,8 @@
   
   <h2>Eugène</h2>
   <p>Lui c'est Eugène il est plutôt beau gosse ouai.<br/>
-  Ce qu'il aime le plus c'est les cuillères à soupe de soupe de sucre et le mot "plétore"</p>
-  Pitre hilare et leader né à la fois, ses proches l'adorent.<br/>
+  Ce qu'il aime le plus c'est les cuillères à soupe de soupe de sucre et le mot "plétore"<br/>
+  Pitre hilare et leader né à la fois, ses proches l'adorent.</p>
   <div>
     <img src="img/eugene.png" alt="Eugène ce beau gosse" title="Eugène ce beau gosse" height="200">
     <img src="img/eugene_flambeur.png" alt="Eugène ce flambeur" title="Eugène ce flambeur" height="200">
