--- a/srcs/requirements/wordpress/tools/eugene/index.html
+++ b/srcs/requirements/wordpress/tools/eugene/index.html
@@ -81,7 +81,7 @@
   <p>Voilà c'est tout.<br/>
   <em>Joyeux Hanouka.</em></p>
   <div>
-    <img src="img/eugene_meal.gif" alt="Eugène et la mif'" title="Eugène et la mif'" height="200">
+    <img src="img/eugene_meal.png" alt="Eugène et la mif'" title="Eugène et la mif'" height="200">
   </div>
 </body>
 </html>
